--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0037)https://superrun.wixsite.com/download -->
 <html lang="ru"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="google-site-verification" content="7VZCh2i1YfqGjIjq0NY3nAgJBaPEw0kq1YF9IGQiUwk" />
   
   
   <meta name="viewport" content="width=device-width, initial-scale=1" id="wixDesktopViewport">
